syntax = "proto3";

package demoservice;

service DemoService {
  // Obtains the feature at a given position.
  rpc GetData(Input) returns (Output) {}

  // Obtains the feature at a given position.
  rpc GetData1(Input) returns (Output) {}
}

message Input {
  int32 requestId = 1;
}

message Output {
  int32 responseId = 1;
}